created email module. cleaned dates

--- a/projects/new_trades_shortrisk.html
+++ b/projects/new_trades_shortrisk.html
@@ -25,26 +25,26 @@
   </thead>
   <tbody>
     <tr>
-      <th>CDXOption0041547</th>
-      <td>2019-01-15</td>
-      <td>20/02/2019 00:00:00</td>
-      <td>BNP PARIBAS</td>
-      <td>PayerSpread MA30 20-Feb-19 Payer 100</td>
-      <td>-1.000000e+09</td>
-      <td>0.0</td>
+      <th>CDX0041817</th>
+      <td>2019-01-17</td>
+      <td>20/12/2023 00:00:00</td>
+      <td>ICE Clear Credit LLC</td>
+      <td>CDX.NA.IG.31-V1 5Y</td>
+      <td>-47000000.0</td>
+      <td>0.00000</td>
       <td>NaN</td>
       <td>NaN</td>
     </tr>
     <tr>
-      <th>CDO0041590</th>
-      <td>2019-01-15</td>
-      <td>20/12/2020 00:00:00</td>
+      <th>CDO0041819</th>
+      <td>2019-01-17</td>
+      <td>20/06/2021 00:00:00</td>
       <td>JPMorgan Chase Bank, National Association</td>
-      <td>JPM_Bianca_Dec20_0-3</td>
-      <td>-1.500000e+07</td>
+      <td>JPM_PulsarV2_Jun21_0-5</td>
+      <td>-25000000.0</td>
+      <td>0.13965</td>
       <td>0.0</td>
-      <td>0.0</td>
-      <td>0.03</td>
+      <td>0.05</td>
     </tr>
   </tbody>
 </table>
